Fixed search input clickable being too small
Fixed an issue where the clickable area to interact with the search bar was too small compared to how it appeared visually.

--- a/frontend/src/Components/SearchBar.css
+++ b/frontend/src/Components/SearchBar.css
@@ -7,13 +7,13 @@
     box-shadow: 0px 0px 8px #ddd;
     display: flex;
     align-items: center;
-    margin-top: -100px;
 }
 
 input {
     background-color: transparent;
     border: none;
     height: 100%;
+    width: 100%;
     font-size: 1.25rem;
     margin-left: 5px;
 }
